appId: com.google.android.apps.photos
---
- addMedia:
    - "./src/test/resources/media/assets/sample_video.mp4"
- launchApp:
    appId: com.google.android.apps.photos
- runFlow:
    when:
      visible: Update Now
    commands:
      - tapOn:
          text: Update Now
          optional: true
      - back
# assert that photo is taken
- assertVisible: "Video taken on.*"
- tapOn: "Video taken on.*"