appId: com.other.app
---
- repeat:
    while:
      notVisible: "3"
    commands:
      - tapOn: Button
- assertVisible: "3"
- repeat:
    while:
      notVisible: "3"
    commands:
      - tapOn: Button
- assertVisible: "3"